--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,23 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+   /* implementation 'androidx.appcompat:appcompat:1.5.0'*/
+   /* implementation 'com.journeyapps:zxing-android-embedded:4.3.0@aar'*/
+    /*implementation 'com.google.zxing:core:3.4.1'*/
+    /*implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.4.1'*/
+    /*implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
     implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.zxing:core:3.4.1'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0@aar'*/
+   // implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
 }
