--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+
 
     <application
         android:allowBackup="true"
@@ -17,8 +19,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BarCodeScanner"
         tools:targetApi="31">
+
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation" />
+        <!--<activity
+            android:name=".Capture"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="fullSensor"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>-->
         <activity
             android:name=".ScanQr"
+
             android:exported="false" />
         <activity
             android:name=".GenerateQr"
