--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/qr_code_scan"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/qr_code_scan"
         android:supportsRtl="true"
         android:theme="@style/Theme.BarCodeScanner"
         tools:targetApi="31">
@@ -32,18 +32,17 @@
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>-->
         <activity
-            android:name=".ScanQr"
+            android:name="com.example.barcodescanner.ScanQr"
 
             android:exported="false" />
         <activity
-            android:name=".GenerateQr"
+            android:name="com.example.barcodescanner.GenerateQr"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.barcodescanner.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
